# v2up

./: .gitignore  Cargo.toml  README.md  settings.yaml.handlebars
src/: context.rs  main.rs  server.rs  settings.rs
src/commands/: mod.rs  servers.rs  start.rs  status.rs  stop.rs  subscriptions.rs  work.rs
src/errors/: kind.rs  mod.rs
src/utils/: logger.rs  mod.rs  pid_file.rs  process.rs
src/v2ray/: config.rs  mod.rs  process.rs  server.rs
src/workdir/: dir.rs  file.rs  mod.rs  servers.rs  settings.rs
src/workdir/templates/: pac.js.handlebars  settings.yaml.handlebars  v2ray.json.handlebars
