[package]
name = "v2up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
serde_json = "1.0.81"
sysinfo = "0.23.12"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "v2up"
src = "src/bin/cli/main.rs"
