[package]
name = "v2up"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
serde_json = "1.0.81"
sysinfo = "0.23.12"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
tokio = { version = "1", features = ["full"] }
base64 = "0.13.0"
dialoguer = "0.10.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
fork = "0.1"
nix = "0.24.1"
signal-hook = "0.3.14"
libc = "0.2.137"
termion = "*"
handlebars = "4.3.5"
rust-embed="6.4.2"
once_cell="1.16.0"
dirs = "4.0.0"